--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,4 +3,11 @@
     <string name="app_name">QuitSmoking</string>
 
     <string name="smoke_free_label">Time smoke free</string>
+    <string name="money_saved_label">Money saved</string>
+    <string name="life_regained_label">Life regained</string>
+    <string name="cigs_not_smoked_label">Cigarettes not smoked</string>
+    <string name="history_card_title">During that period:</string>
+    <string name="cigs_smoked_label">Cigarettes smoked</string>
+    <string name="money_spent_label">Spent money</string>
+    <string name="life_lost_label">Lost life</string>
 </resources>
