--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,20 @@
     <string name="cigs_smoked_label">Skajene cigarete</string>
     <string name="money_spent_label">Porabljen denar</string>
     <string name="life_lost_label">Izgubljeno življenje</string>
+
+    <string name="goal_title">CILJ</string>
+    <string name="goal_two_days">2 dni</string>
+    <string name="goal_three_days">3 dni</string>
+    <string name="goal_four_days">4 dni</string>
+    <string name="goal_five_days">5 dni</string>
+    <string name="goal_six_days">6 dni</string>
+    <string name="goal_ten_days">10 dni</string>
+    <string name="goal_one_week">1 teden</string>
+    <string name="goal_two_weeks">2 tedna</string>
+    <string name="goal_three_weeks">3 tedni</string>
+    <string name="goal_one_month">1 mesec</string>
+    <string name="goal_three_months">3 meseci</string>
+    <string name="goal_six_months">6 mesecev</string>
+    <string name="goal_one_year">1 leto</string>
+    <string name="goal_five_years">5 let</string>
 </resources>
