--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,6 +7,7 @@
     <string name="life_regained_label">Life regained</string>
     <string name="cigs_not_smoked_label">Cigarettes not smoked</string>
     <string name="history_card_title">During that period:</string>
+    <string name="stats_card_title">As a nonsmoker:</string>
     <string name="cigs_smoked_label">Cigarettes smoked</string>
     <string name="money_spent_label">Spent money</string>
     <string name="life_lost_label">Lost life</string>
