--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="nav_progress_title">PROGRESS</string>
+    <string name="nav_home_title">PROGRESS</string>
     <string name="nav_trophies_title">BADGES</string>
     <string name="nav_health_title">HEALTH</string>
     <string name="nav_store_title">STORE</string>
