--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="channel_name" translatable="false">Goal</string>
     <string name="channel_description" translatable="false">Notify when goal is done.</string>
 
-    <string name="nav_progress_title">NAPREDEK</string>
+    <string name="nav_home_title">NAPREDEK</string>
     <string name="nav_trophies_title">ZNAČKE</string>
     <string name="nav_health_title">ZDRAVJE</string>
     <string name="nav_store_title">TRGOVINA</string>
